--- a/client/build.gradle
+++ b/client/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.0.1.Final'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.46'
+    compile "org.slf4j:slf4j-api:1.6.1"
+    compile "org.slf4j:slf4j-simple:1.6.1"
+
 
 
 }
